# UR10_mbzirc

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-pull.sh  docker-run.sh
src/control/: CMakeLists.txt  package.xml
src/control/config/: params.yaml
src/control/include/: control.hpp
src/control/launch/: control.launch
src/control/src/: control.cpp  control_main.cpp
src/custom_ur10_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/custom_ur10_moveit_config/config/: fake_controllers.yaml  gazebo_ur10.urdf  new_ros_controllers.yaml  ompl_planning.yaml  sensors_3d.yaml  stomp_planning.yaml  ur10.srdf
src/custom_ur10_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_ur10.launch  fake_moveit_controller_manager.launch.xml  full_robot_arm_sim.launch  gazebo.launch  move_group.launch  move_group_test.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  tf_camera.launch
src/meta/: CMakeLists.txt  package.xml
src/meta/launch/: camera_calibration.launch  camera_mission.launch  dummy_mission.launch
src/perception/: CMakeLists.txt  package.xml
src/perception/launch/: camera_perception.launch  dummy_perception.launch  tf_camera.launch
src/perception/src/: target_updater.cpp
src/vl53l0x_driver/: README.md  docker-run.sh
(+13 files in other folders)
